# ratatui-file-browser

./: .gitignore  .gitmodules  Cargo.toml  README.md
.fleet/: run.json
src/: app.rs  constants.rs  main.rs  options.rs  stateful_list.rs  tui.rs  util.rs
src/app/: components.rs  fs_error.rs  styles.rs
src/app/components/: component.rs  directory.rs  head.rs  helpers.rs  preview.rs
src/app/components/preview/: binary.rs  folder.rs  list_pane.rs  message_pane.rs  other.rs  oversize.rs  preview_pane.rs  text.rs
